예제 이미지수정

--- a/02_07_sample.html
+++ b/02_07_sample.html
@@ -17,7 +17,7 @@ body, input, textarea, select, button, table {
 body {
 	position: relative;
 	-webkit-text-size-adjust: none;
-	background:url(./img/wood-bg.jpg);
+	background:pink;
 }
 img, fieldset {border: 0}
 ul, ol {list-style: none}
