--- a/02_03_sample_default.html
+++ b/02_03_sample_default.html
@@ -8,15 +8,15 @@
 .map_graph,
 .map_graph span{
 	background:url("img/sp_map.png") no-repeat;
+	-webkit-background-size:322px 534px;
 	background-size:322px 534px;
-	-webkit-background-size:322px 534px
 }
 .map_graph{
 	position:relative;
 	width:320px;
 	height:453px;
 	margin:10px 0 20px 40px;
-	background-position:0 -80px
+	background-position:0 -80px;
 }
 .map_graph span{
 	position:absolute;
@@ -26,7 +26,7 @@
 	padding:10px;
 	border:14px solid rgba(0,0,0,0);
 	-webkit-border-radius:50%;
-	background-position:-12px -12px
+	background-position:-12px -12px;
 	}
 </style>
 </head>
