--- a/02_01_sample.html
+++ b/02_01_sample.html
@@ -2,41 +2,105 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, target-densitydpi=medium-dpi">
 <title>유리처럼 반사되는 순위 키워드 만들기</title>
 
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
 <style>
-	.rangking{height:35px;padding:10px;border:10px solid #000;font-size:16px;line-height:16px;font-weight:bold;-webkit-box-reflect:below 1px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.3, transparent), to(rgba(0,0,0,0.4)))}
-	.key{overflow:hidden}
-	.rolling{display: block;position:relative;padding: 9px 40px 9px 10px;color: #000;white-space: nowrap;-webkit-animation:movein ease 3s}
-	.num{display:inline-block;width:15px;height:15px;margin-right:5px;background:url(img/ico_rank.png) no-repeat;background-size:15px auto;-webkit-background-size:15px auto;text-indent:-999em;vertical-align:top}
-	.num2{background-position:0 -18px}
-	.num3{background-position:0 -36px}
-	.num4{background-position:0 -54px}
-	.num5{background-position:0 -72px}
-	.num6{background-position:0 -90px}
-	.num7{background-position:0 -108px}
-	.num8{background-position:0 -126px}
-	.num9{background-position:0 -144px}
-	.num10{background-position:0 -164px}
-	.txt{display: inline-block;overflow:hidden;max-width: 100%;text-overflow: ellipsis;vertical-align: top}
-	.ico_rangking{display:inline-block;width:15px;height:15px;background:url(img/ico_rank.png) no-repeat;background-size:15px auto;-webkit-background-size:15px auto;text-indent:-999em;vertical-align:top}
-	.up{background-position:50% -178px}
-	.down{background-position:50% -189px}
+	.rangking{
+		height:35px;
+		padding:10px;
+		border:10px solid #000;
+		font-size:16px;
+		line-height:16px;
+		font-weight:bold;
+		-webkit-box-reflect:below 1px -webkit-linear-gradient(top,transparent,transparent 30%,rgba(0,0,0,0.4));
+	}
+	.key{
+		overflow:hidden
+	}
+	.rolling{
+		display: block;
+		position:relative;
+		padding: 9px 40px 9px 10px;
+		color: #000;
+		white-space: nowrap;
+		-webkit-animation:movein ease 3s
+	}
+	.num{
+		display:inline-block;
+		width:15px;
+		height:15px;
+		margin-right:5px;
+		background:url(img/ico_rank.png) no-repeat;
+		-webkit-background-size:15px auto;
+		background-size:15px auto;
+		text-indent:-999em;
+		vertical-align:top;
+	}
+	.num2{
+		background-position:0 -18px;
+	}
+	.num3{
+		background-position:0 -36px;
+	}
+	.num4{
+		background-position:0 -54px;
+	}
+	.num5{
+		background-position:0 -72px;
+	}
+	.num6{
+		background-position:0 -90px;
+	}
+	.num7{
+		background-position:0 -108px;
+	}
+	.num8{
+		background-position:0 -126px;
+	}
+	.num9{
+		background-position:0 -144px;
+	}
+	.num10{
+		background-position:0 -164px;
+	}
+	.txt{
+		display: inline-block;
+		overflow:hidden;
+		max-width: 100%;
+		text-overflow: ellipsis;
+		vertical-align: top;
+	}
+	.ico_rangking{
+		display:inline-block;
+		width:15px;
+		height:15px;
+		background:url(img/ico_rank.png) no-repeat;
+		-webkit-background-size:15px auto;
+		background-size:15px auto;
+		text-indent:-999em;
+		vertical-align:top;
+	}
+	.up{
+		background-position:50% -178px;
+	}
+	.down{
+		background-position:50% -189px;
+	}
 	@-webkit-keyframes movein{
 		0%{
-		    bottom:-50px
+		    bottom:-50px;
 		}
         30%{
-            bottom: 0px
+            bottom: 0px;
         }
         80% {
-            bottom : 0px
+            bottom : 0px;
         }
 		100%{
-		    bottom: 50px
+		    bottom: 50px;
 		}
 	}
 </style>
