--- a/02_05_sample.html
+++ b/02_05_sample.html
@@ -2,41 +2,40 @@
 <head>
 <title>세로 막대그래프 만들기</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, target-densitydpi=medium-dpi">
 <style type="text/css" >
 /* Common */
 body,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,th,td,form,fieldset,legend,input,textarea,button,select{
-margin:0;
-padding:0;
-font-family:Helvetica
+	margin:0;
+	padding:0;
+	font-family:Helvetica;
 }
 body,input,textarea,select,button,table{
-font-size:14px;
-line-height:1.25em
+	font-size:14px;
+	line-height:1.25em;
 }
 body{
-position:relative;
--webkit-text-size-adjust:none
+	position:relative;
+	-webkit-text-size-adjust:none;
 }
 img,fieldset{
-border:0
+	border:0;
 }
 ul,ol{
-list-style:none
+	list-style:none;
 }
 em,address{
-font-style:normal
+	font-style:normal;
 }
 a{
-text-decoration:none
+	text-decoration:none;
 }
 table{
-border-collapse:collapse
+	border-collapse:collapse;
 }
 hr{
-display:none !important
+	display:none !important;
 }
-
 /* css bar graph */
 .graph_area{ 
     position:relative;
