--- a/02_05_sample_default.html
+++ b/02_05_sample_default.html
@@ -26,7 +26,7 @@ ul,ol,li{list-style:none}
 	 border:1px solid #000;
 	 border-bottom:2px solid  #000 ;
 	 border-left:2px solid   #000;
-	 background:url(img/bg_bar_graph.gif) repeat-x;#000;
+	 background:url(img/bg_bar_graph.gif) repeat-x;
 }
 .bar{
 	width:30px;
