--- a/02_07_sample.html
+++ b/02_07_sample.html
@@ -5,26 +5,37 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, target-densitydpi=medium-dpi">
 <style type="text/css">
 /* Common */
-body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, table, th, td, form, fieldset, legend, input, textarea, button, select {
-	margin: 0;
-	padding: 0;
-	font-family: Helvetica
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,th,td,form,fieldset,legend,input,textarea,button,select{
+	margin:0;
+	padding:0;
+	font-family:Helvetica;
 }
-body, input, textarea, select, button, table {
-	font-size: 14px;
-	line-height: 1.25em
+body,input,textarea,select,button,table{
+	font-size:14px;
+	line-height:1.25em;
 }
-body {
-	position: relative;
-	-webkit-text-size-adjust: none;
-	background:pink;
+body{
+	position:relative;
+	-webkit-text-size-adjust:none;
 }
-img, fieldset {border: 0}
-ul, ol {list-style: none}
-em, address {font-style: normal}
-a {text-decoration: none}
-table {border-collapse: collapse}
-hr {display: none !important}
+img,fieldset{
+	border:0;
+}
+ul,ol{
+	list-style:none;
+}
+em,address{
+	font-style:normal;
+}
+a{
+	text-decoration:none;
+}
+table{
+	border-collapse:collapse;
+}
+hr{
+	display:none !important;
+}
 
 .polaroid{
 	margin:0 auto;
@@ -33,7 +44,7 @@ hr {display: none !important}
 .polaroid li{
 	display:inline-block;
 	margin:20px;
-	z-index:5
+	z-index:5;
 }
 .polaroid li a{
 	display:block;
@@ -43,11 +54,11 @@ hr {display: none !important}
 	text-decoration:none;
 	-webkit-box-shadow:3px 4px 0 #888;
 	-webkit-transition:all 1s;
-	z-index:0
+	z-index:0;
 }
 .polaroid li a img{
 	display:block;
-	width:95px
+	width:95px;
 }
 .polaroid li a span{
 	display:block;
@@ -55,22 +66,22 @@ hr {display: none !important}
 	text-align:center;
 	font-weight:bold;
 	font-size:24px;
-	color:#000
+	color:#000;
 }
-.polaroid li:nth-child(1) a{-webkit-transform:rotate(10deg)}
-.polaroid li:nth-child(2) a{-webkit-transform:rotate(-5deg)}
-.polaroid li:nth-child(3) a{-webkit-transform:rotate(2deg)}
-.polaroid li:nth-child(4) a{-webkit-transform:rotate(4deg)}
-.polaroid li:nth-child(5) a{-webkit-transform:rotate(-7deg)}
-.polaroid li:nth-child(6) a{-webkit-transform:rotate(5deg)}
-.polaroid li:nth-child(7) a{-webkit-transform:rotate(-3deg)}
-.polaroid li:nth-child(8) a{-webkit-transform:rotate(-6deg)}
-.polaroid li:nth-child(9) a{-webkit-transform:rotate(9deg)}
+.polaroid li:nth-child(1) a{-webkit-transform:rotate(10deg);}
+.polaroid li:nth-child(2) a{-webkit-transform:rotate(-5deg);}
+.polaroid li:nth-child(3) a{-webkit-transform:rotate(2deg);}
+.polaroid li:nth-child(4) a{-webkit-transform:rotate(4deg);}
+.polaroid li:nth-child(5) a{-webkit-transform:rotate(-7deg);}
+.polaroid li:nth-child(6) a{-webkit-transform:rotate(5deg);}
+.polaroid li:nth-child(7) a{-webkit-transform:rotate(-3deg);}
+.polaroid li:nth-child(8) a{-webkit-transform:rotate(-6deg);}
+.polaroid li:nth-child(9) a{-webkit-transform:rotate(9deg);}
 .polaroid li a:hover{
 	-webkit-transform: rotate(0deg);
 	-webkit-transform:scale(1.5);
 	-webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
-	z-index:20
+	z-index:20;
 }
 	</style>
 </head>
