--- a/02_01_sample.html
+++ b/02_01_sample.html
@@ -18,7 +18,7 @@
 		-webkit-box-reflect:below 1px -webkit-linear-gradient(top,transparent,transparent 30%,rgba(0,0,0,0.4));
 	}
 	.key{
-		overflow:hidden
+		overflow:hidden;
 	}
 	.rolling{
 		display: block;
@@ -26,7 +26,7 @@
 		padding: 9px 40px 9px 10px;
 		color: #000;
 		white-space: nowrap;
-		-webkit-animation:movein ease 3s
+		-webkit-animation:movein ease 3s;
 	}
 	.num{
 		display:inline-block;
