--- a/02_05_sample_default.html
+++ b/02_05_sample_default.html
@@ -9,7 +9,7 @@
 		body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, table, th, td, form, fieldset, legend, input, textarea, button, select {
 			margin: 0;
 			padding: 0;
-			font-family: Helvetica;
+			font-family: Helvetica,sans-serif;
 		}
 		body, input, textarea, select, button, table {
 			font-size: 14px;
