--- a/02_05_sample.html
+++ b/02_05_sample.html
@@ -62,6 +62,9 @@ hr{
     display: -webkit-flex;
     -webkit-justify-content: space-around;
 }
+.x-axis li{
+   width:30px;
+} 
 .y-axis{
     position:absolute;
     top:-5px;
